--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40.0dp"
                     android:layout_centerVertical="true"
+                    android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:paddingLeft="10.0dp"
                     android:paddingRight="10.0dp" >
