--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -44,5 +44,7 @@
     <!-- listview风格线 -->
     <color name="list_divider">#f1f1e8</color>
     <color name="image_loading_bg">#ffefefef</color>
+    <color name="item_title_normal">#ff444444</color>
+    <color name="item_title_disabled">#ff888888</color>
 
 </resources>
