--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -46,5 +46,7 @@
     <color name="image_loading_bg">#ffefefef</color>
     <color name="item_title_normal">#ff444444</color>
     <color name="item_title_disabled">#ff888888</color>
+    <!-- divider style -->
+    <color name="divider_day">#ffdddddd</color>
 
 </resources>
