--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -144,5 +144,37 @@
         <!-- page animation time span -->
         <attr name="pager_animation_span" format="integer" />
     </declare-styleable>
+    <!-- flip view -->
+    <declare-styleable name="FlipView">
+        <attr name="orientation" format="enum">
+            <enum name="vertical" value="0" />
+            <enum name="horizontal" value="1" />
+        </attr>
+        <attr name="overFlipMode" format="enum">
+            <enum name="glow" value="0" />
+            <enum name="rubber_band" value="1" />
+        </attr>
+    </declare-styleable>
+    <!-- 图片加载进度条 -->
+    <attr name="progressButtonStyle" format="reference" />
+
+    <declare-styleable name="ProgressButton">
+        <attr name="progress" format="integer" />
+        <attr name="max" format="integer" />
+        <attr name="circleColor" format="color" />
+        <attr name="progressColor" format="color" />
+        <attr name="shadowDrawable1" format="reference" />
+        <attr name="pinnedDrawable" format="reference" />
+        <attr name="unpinnedDrawable" format="reference" />
+        <attr name="innerSize" format="dimension" />
+        <attr name="pinned" format="boolean" />
+        <attr name="animating" format="boolean" />
+        <attr name="animationSpeed" format="integer" />
+        <attr name="animationDelay" format="integer" />
+        <attr name="animationStripWidth" format="integer" />
+        <attr name="android:background" />
+        <attr name="android:clickable" />
+        <attr name="android:focusable" />
+    </declare-styleable>
 
 </resources>
