--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -48,5 +48,9 @@
     <color name="item_title_disabled">#ff888888</color>
     <!-- divider style -->
     <color name="divider_day">#ffdddddd</color>
+    <color name="title_text_color">#ffffffff</color>
+    <color name="detail_title_text_color">#ff999999</color>
+    <color name="progress_default_circle_color">#80ffffff</color>
+    <color name="progress_default_progress_color">#33b5e5</color>
 
 </resources>
