--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -153,4 +153,39 @@
         <item name="android:textColor">@color/detail_title_text_color</item>
     </style>
 
+    <style name="ProgressButton" />
+    <!-- Base theme for the Progress button. -->
+    <style name="ProgressButton.Pin">
+        <item name="progress">0</item>
+        <item name="max">100</item>
+        <item name="circleColor">@color/progress_default_circle_color</item>
+        <item name="progressColor">@color/progress_default_progress_color</item>
+        <item name="pinnedDrawable">@drawable/pin_progress_pinned</item>
+        <item name="unpinnedDrawable">@drawable/pin_progress_unpinned</item>
+        <item name="shadowDrawable1">@drawable/pin_progress_shadow</item>
+        <item name="innerSize">@dimen/progress_inner_size</item>
+        <item name="pinned">false</item>
+        <item name="animating">false</item>
+        <item name="animationSpeed">1</item>
+        <item name="animationDelay">50</item>
+        <item name="animationStripWidth">6</item>
+        <item name="android:clickable">false</item>
+        <item name="android:focusable">false</item>
+    </style>
+
+    <!-- Base theme for the Progress button. -->
+    <style name="ProgressButton.Pin.Compat">
+        <item name="android:background">@android:drawable/list_selector_background</item>
+    </style>
+
+    <style name="ProgressButton.1">
+        <!-- Default ! -->
+    </style>
+
+    <style name="ProgressButton.2">
+
+        <!-- Starts pinned and is NOT clickable ! -->
+        <item name="pinned">true</item>
+    </style>
+
 </resources>
