update news fragment

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -176,5 +176,26 @@
         <attr name="android:clickable" />
         <attr name="android:focusable" />
     </declare-styleable>
+    
+    <declare-styleable name="ProgressPieView">
+        <attr name="progress1" format="integer" />
+        <attr name="max1" format="integer" />
+        <attr name="startAngle" format="integer" />
+        <attr name="strokeWidth" format="dimension" />
+        <attr name="backgroundColor" format="reference|color" />
+        <attr name="progressColor1" format="reference|color" />
+        <attr name="strokeColor" format="reference|color" />
+        <attr name="showStroke" format="boolean" />
+        <attr name="showText" format="boolean" />
+        <attr name="typeface" format="string" />
+        <attr name="image" format="reference" />
+        <attr name="android:text" />
+        <attr name="android:textSize" />
+        <attr name="android:textColor" />
+        <attr name="progressFillType" format="enum">
+            <enum name="radial" value="0" />
+            <enum name="center" value="1" />
+        </attr>
+    </declare-styleable>
 
 </resources>
