--- a/res/layout/head_item.xml
+++ b/res/layout/head_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <com.tiger.quicknews.wedget.viewimage.Animations.SliderLayout
+    <com.lb.quicknews.wedget.viewimage.Animations.SliderLayout
         android:id="@+id/slider"
         android:layout_width="match_parent"
         android:layout_height="200dp"
