--- a/res/layout/detail_title_bar.xml
+++ b/res/layout/detail_title_bar.xml
@@ -4,6 +4,8 @@
     android:gravity="center_vertical" >
 
     <TextView
+        android:layout_width="24dp"
+        android:layout_height="40dp"
         android:id="@+id/back"
         style="@style/detail_back_view"
         android:onClick="doBack" />
