--- a/res/layout/activity_left.xml
+++ b/res/layout/activity_left.xml
@@ -21,7 +21,8 @@
         android:id="@+id/news"
         style="@style/item_left"
         android:drawableLeft="@drawable/biz_navigation_tab_news"
-        android:text="@string/ties" />
+        android:text="@string/ties"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/tianqi"
