--- a/res/layout/activity_video.xml
+++ b/res/layout/activity_video.xml
@@ -1,8 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:flipview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:background="@color/activity_bg_color" >
 
-</LinearLayout>
+    <include
+        android:id="@+id/include1"
+        layout="@layout/common_title_bar" />
+
+    <RadioGroup
+        android:id="@+id/radiogroup"
+        android:layout_width="match_parent"
+        android:layout_height="40.0dp"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/include1"
+        android:orientation="horizontal" >
+
+        <RadioButton
+            android:id="@+id/video_redian"
+            style="@style/common_top"
+            android:checked="true"
+            android:text="@string/video_redian" />
+
+        <RadioButton
+            android:id="@+id/video_yule"
+            style="@style/common_top"
+            android:text="@string/video_yule" />
+
+        <RadioButton
+            android:id="@+id/video_gaoxiao"
+            style="@style/common_top"
+            android:text="@string/video_gaoxiao" />
+
+        <RadioButton
+            android:id="@+id/video_jingpin"
+            style="@style/common_top"
+            android:text="@string/video_jingpin" />
+    </RadioGroup>
+
+    <View
+        android:id="@+id/category_line"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/radiogroup"
+        android:background="#ffdddddd" />
+
+    <com.lb.quicknews.wedget.gesture.EnableChildSlideFrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/category_line" >
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+        </android.support.v4.view.ViewPager>
+    </com.lb.quicknews.wedget.gesture.EnableChildSlideFrameLayout>
+
+</RelativeLayout>
