--- a/res/layout/photo_item_detail.xml
+++ b/res/layout/photo_item_detail.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <com.lb.quicknews.wedget.ProgressButton
         android:id="@+id/progressButton"
