--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -221,4 +221,19 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="weather_title">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">21.0sp</item>
+    </style>
+
+    <style name="weather_temp">
+        <item name="android:textSize">18.0sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="weather_weather">
+        <item name="android:textSize">16.0sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
